# enredo

./: AUTHORS  COPYING  Makefile.in  README  configure  configure.in
src/: Makefile.am  Makefile.in  anchor.cpp  anchor.h  enredo.cpp  graph.cpp  graph.h  link.cpp  link.h  merge_overlap.cpp  syntenygraph.cpp
tools/: EstimateStrand.pl  assess_graph.pl  load_ortheus_pipeline.pl  store_output.pl
