bin_PROGRAMS = syntenygraph mergeoverlap
syntenygraph_SOURCES = syntenygraph.cpp anchor.cpp graph.cpp link.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
syntenygraph_LDFLAGS = $(all_libraries) 
noinst_HEADERS = anchor.h graph.h link.h
mergeoverlap_SOURCES = merge_overlap.cpp
