bin_PROGRAMS = mergeoverlap enredo
enredo_SOURCES = enredo.cpp anchor.cpp graph.cpp link.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
enredo_LDFLAGS = $(all_libraries) 
noinst_HEADERS = anchor.h graph.h link.h
mergeoverlap_SOURCES = merge_overlap.cpp
